# BackupDaemon

./: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac
src/: backupd.c  hash_set.c  hash_set.h  ini_parse.c  ini_parse.h  makefile
test/: ini_test.c  makefile
